--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,12 @@
   },
   "require": {
     "php": ">=8.1.0",
-    "tanglephp/core": "dev-main",
-    "tanglephp/singlenode-client": "dev-main",
-    "tanglephp/indexer-plugin": "dev-main",
-    "tanglephp/faucet-client": "dev-main",
-    "tanglephp/chronicle-client": "dev-main",
-    "tanglephp/market-client": "dev-main"
+    "tanglephp/core": "*",
+    "tanglephp/singlenode-client": "*",
+    "tanglephp/indexer-plugin": "*",
+    "tanglephp/faucet-client": "*",
+    "tanglephp/chronicle-client": "*",
+    "tanglephp/market-client": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.5"
